Update files for screen adjustments

--- a/leonardo/index.html
+++ b/leonardo/index.html
@@ -48,6 +48,9 @@
                 <a href="support.html" class="button">Contact Us</a>
             </aside>
     </div>
+    <div class="burger">
+        <i class="fa-solid fa-bars" style="color: #008080;"></i>
+    </div>
     <section class="hero">
     <p class="overlay"></p>
     <div class="content-wrapper flex-box">
