updated href links

--- a/leonardo/pages/index.html
+++ b/leonardo/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leonardo: Smart Assistant</title>
+    <title>LEONARDO | Your Smart Home and Office Assistant</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/main-tablet-1024.css" media="(max-width:1024px)">
     <link rel="stylesheet" href="../css/mid-tablet-820.css" media="(max-width:820px)">
