fixed broken image links

--- a/leonardo/pages/aboutUs.html
+++ b/leonardo/pages/aboutUs.html
@@ -157,7 +157,7 @@
         <a href="#six">Learn More</a>
 
         <div class="big-image">
-            <img src=".../images/matter-header 1 (2).png" id="header" alt="">
+            <img src="../images/matter-header 1 (2).png" id="header" alt="">
             <img src="../images/matter-header 1 (1).png" id="main" alt="">
             <img src="../images/lightning.bg.png" id="light" alt="">
             <img src="../images/comfort.bg.png" id="comfort" alt="">
