--- a/leonardo/pages/inspired.html
+++ b/leonardo/pages/inspired.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LEONARDO | Your Smart Home and Office Assistant</title>
+    <link rel="icon" type="icon/x-images" href="../images/nav bar logo.png">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/main-tablet-1024.css" media="(max-width:1024px)">
     <link rel="stylesheet" href="../css/mid-tablet-820.css" media="(max-width:820px)">
