--- a/leonardo/pages/inspired.html
+++ b/leonardo/pages/inspired.html
@@ -79,7 +79,7 @@
             <img src="../images/unsplash_net.png" alt="Smart TV image" id="img-right">
         </div>
         <div class="blue-action">
-            <button class="download">Get Started</button>
+            <button class="download download-btn">Get Started</button>
         </div>
     </section>
 
@@ -111,8 +111,8 @@
                 <h3>Get the Leonardo Smart Assistant App</h3>
                 <p>The Smarter way to get things done</p>
                 <p>
-                    <span><img src="../images/GOOGLE PLAY.png" alt="Google Play"></span>
-                    <span><img src="../images/APPLE STORE.png" alt="App Store"></span>
+                    <span class="download-btn"><img src="../images/GOOGLE PLAY.png" alt="Google Play"></span>
+                    <span class="download-btn"><img src="../images/APPLE STORE.png" alt="App Store"></span>
                 </p>
             </div>
             <div class="download-img relative flex-item">
@@ -166,5 +166,6 @@
             <p>Copyright &copy; 2024 Leonardo. All rights reserved.</p>
         </section>
     </footer>
+    <script src="../js/app.js"></script>
 </body>
 </html>
