redesigned faq section

--- a/leonardo/pages/index.html
+++ b/leonardo/pages/index.html
@@ -69,10 +69,10 @@
         </p>
         <div class="button-holder flex-box flex-item flex-item4">
             <div class="get-started">
-               <button id="start" onclick="alert('Downloading...')"> Get Started for Free</button>
+               <a id="start" class="button" href="login.html"> Get Started for Free</a>
             </div>
             <div class="explore">
-                <button id="explore" onclick="(open('index.html'))">Explore Leonardo</button>
+                <button id="explore" onclick="open('index.html')">Explore Leonardo</button>
             </div>
         </div>
     </div>
@@ -167,7 +167,7 @@
                         <br><br>
                     </p>
                     <p>
-                        <button>Learn More</button>
+                        <button onclick="open('../pages/about.html')">Learn More</button>
                     </p>
                     </div>
                 </div>
