--- a/leonardo/pages/support.html
+++ b/leonardo/pages/support.html
@@ -73,31 +73,64 @@
 
     <section class="faq">
         <h3>Frequently asked questions about Leonardo Smart Device</h3>
-
-        <div class="questions-text">
+        <div class="faq-holder">
+            <div class="faq-item q1">
+                <li class="question"><span class="question-tab">What are the benefits of using Leonardo Smart Device over other smart  home device? </span>
+                    <span class="response-pop btn1"><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
+                </li>
+            </div>
+            <div class="faq-item q2">
+                <li class="question"><span class="question-tab">How do I set up Leonardo smart device for my home and office?</span>
+                    <span class="response-pop btn2"><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
+                </li>
+            </div>
+            <div class="faq-item q3">
+                <li class="question"><span class="question-tab">Do all smart devices work with Google Home?</span>
+                    <span class="response-pop btn3"><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
+                </li>
+            </div>
+            <div class="faq-item q4">
+                <li class="question"><span class="question-tab">What are Matter devices, and how are they different from devices based on other smart home technologies?</span>
+                    <span class="response-pop btn4"><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
+                </li>
+            </div>
+            <div class="faq-item q5">
+                <li class="question"><span class="question-tab">
+                    If one person sets up their smart home, can other people in their home still control it without the help of the person who set it up?
+                </span>
+                    <span class="response-pop btn5"><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
+                </li>
+            </div>
+        </div>
+        <!-- <div class="questions-text">
             <div class="flex-box border-bottom">
                 <span class="question">What are the benefits of using Leonardo Smart Device over other smart  home device? </span>
-                <span><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
+                <span class="response-pop btn1"><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
             </div>
+            <div id="reponse1" class="response"></div>
             <div class="flex-box border-bottom">
                 <span class="question">How do I set up Leonardo smart device for my home and office?</span>
-                <span><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
+                <span class="response-pop btn2"><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
             </div>
+            <div id="reponse2" class="response"></div>
             <div class="flex-box border-bottom">
                 <span class="question">Do all smart devices work with Google Home?</span>
-                <span><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
+                <span class="response-pop btn3"><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
             </div>
+            <div id="reponse3" class="response"></div>
             <div class="flex-box border-bottom">
                 <span class="question">What are Matter devices, and how are they different from devices based on other smart home technologies?</span>
-                <span><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
+                <span class="response-pop btn4"><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
             </div>
+            <div id="reponse4" class="response"></div>
             <div class="flex-box border-bottom">
                 <span class="question">
                     If one person sets up their smart home, can other people in their home still control it without the help of the person who set it up?
                 </span>
-                <span><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
+                <span class="response-pop btn5"><i class="fa-solid fa-angle-up" style="color: #000000;"></i></span>
             </div>
-        </div>
+            <div id="reponse5" class="response"></div>
+        </div> -->
     </section>
 
     <section class="repair">
