--- a/leonardo/pages/login.html
+++ b/leonardo/pages/login.html
@@ -25,8 +25,10 @@
             <div class="form-wrapper">
                 <form action="index.html">
                     <h2>One account. Any device.
+                        <br>
                         Just for you.
-                        Sign in to get started
+                        <br>
+                        Sign in to get started.
                     </h2>
                     <p class="small">Please login to continue to your account.</p>
 
@@ -38,17 +40,19 @@
                     <br>
                     <input type="password" placeholder="Enter your Password" name="password" id="password-login">
                     <br>
-                    <button class="submit">Login</button>
+                    <button class="submit" id="login-btn">Login</button>
+                    <br>
                     <input type="checkbox" name="remember" id="remember"> <span>Keep me logged in</span>
                     <br>
-                    <span>--------------------or----------------------</span>
+                    <span class="center">-------------------------------------------or-------------------------------------------</span>
                     <br>
-                    <button class="google">Continue with Google</button>
+                    <button class="google" onclick="open('google.com')">Continue with Google   <span class="google-icon"><img src="../images/googleplus.png" alt="" srcset=""></span></button>
                     <br>
-                    <span>Need an account? <strong><a href="sign-up.html">Create One</a></strong></span>
+                    <span class="need-account">Need an account? <strong><a href="sign-up.html">Create One</a></strong></span>
                 </form>
             </div>
         </div>
     </div>
+    <script src="../js/login.js"></script>
 </body>
 </html>
