--- a/explore.html
+++ b/explore.html
@@ -83,6 +83,7 @@
 
     <div class="flexbox">
         <div class="unified">
+            <p id="overlay"></p>
             <div class="move2">
             <h3>Unified Control</h3>
             <p>Manage all your smart home and office devices from one intuitive interface. Whether It's lights, thermostats, or security systems, control everything with ease.</p>
