Added new screen sizes

--- a/leonardo/pages/index.html
+++ b/leonardo/pages/index.html
@@ -6,6 +6,7 @@
     <title>LEONARDO | Your Smart Home and Office Assistant</title>
     <link rel="icon" type="icon/x-images" href="../images/nav bar logo.png">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/main-1440.css" media="(max-width:1440px)">
     <link rel="stylesheet" href="../css/main-tablet-1024.css" media="(max-width:1024px)">
     <link rel="stylesheet" href="../css/mid-tablet-820.css" media="(max-width:820px)">
     <link rel="stylesheet" href="../css/mini-tablet-768.css" media="(max-width:768px)">
@@ -72,7 +73,7 @@
                <a id="start" class="button" href="login.html"> Get Started for Free</a>
             </div>
             <div class="explore">
-                <button id="explore" onclick="open('index.html')">Explore Leonardo</button>
+                <button id="explore">Explore Leonardo</button>
             </div>
         </div>
     </div>
