--- a/leonardo/pages/inspired.html
+++ b/leonardo/pages/inspired.html
@@ -6,9 +6,11 @@
     <title>LEONARDO | Your Smart Home and Office Assistant</title>
     <link rel="icon" type="icon/x-images" href="../images/nav bar logo.png">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/main-1440.css" media="(max-width:1440px)">
     <link rel="stylesheet" href="../css/main-tablet-1024.css" media="(max-width:1024px)">
     <link rel="stylesheet" href="../css/mid-tablet-820.css" media="(max-width:820px)">
     <link rel="stylesheet" href="../css/mini-tablet-768.css" media="(max-width:768px)">
+    <link rel="stylesheet" href="../css/large-mobile.css" media="(max-width:600px")>
     <link rel="stylesheet" href="../css/main-mobile-500.css" media="(max-width:500px)">
     <link rel="stylesheet" href="../css/mini-mobile-320.css" media="(max-width:320px)">
     <link rel="stylesheet" href="../css/mid-mobile-380.css" media="(max-width:380px)">
