--- a/leonardo/pages/support.html
+++ b/leonardo/pages/support.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/main-1440.css" media="(max-width:1440px)">
     <link rel="stylesheet" href="../css/main-tablet-1024.css" media="(max-width:1024px)">
+    <link rel="stylesheet" href="../css/mid-screen-900.css" media="(max-width:900px)">
     <link rel="stylesheet" href="../css/mid-tablet-820.css" media="(max-width:820px)">
     <link rel="stylesheet" href="../css/mini-tablet-768.css" media="(max-width:768px)">
     <link rel="stylesheet" href="../css/large-mobile.css" media="(max-width:600px")>
