--- a/leonardo/pages/index.html
+++ b/leonardo/pages/index.html
@@ -6,15 +6,16 @@
     <title>LEONARDO | Your Smart Home and Office Assistant</title>
     <link rel="icon" type="icon/x-images" href="../images/nav bar logo.png">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/main-1440.css" media="(max-width:1440px)">
-    <link rel="stylesheet" href="../css/main-tablet-1024.css" media="(max-width:1024px)">
+    <!-- <link rel="stylesheet" href="../css/main-1440.css" media="(max-width:1440px)"> -->
+    <!-- <link rel="stylesheet" href="../css/main-tablet-1024.css" media="(max-width:1024px)">
+-->
     <link rel="stylesheet" href="../css/mid-screen-900.css" media="(max-width:900px)">
-    <link rel="stylesheet" href="../css/mid-tablet-820.css" media="(max-width:820px)">
-    <link rel="stylesheet" href="../css/mini-tablet-768.css" media="(max-width:768px)">
-    <link rel="stylesheet" href="../css/large-mobile.css" media="(max-width:600px")>
+    <!-- <link rel="stylesheet" href="../css/mid-tablet-820.css" media="(max-width:820px)">
+    <link rel="stylesheet" href="../css/mini-tablet-768.css" media="(max-width:768px)"> -->
+    <!-- <link rel="stylesheet" href="../css/large-mobile.css" media="(max-width:600px")>
     <link rel="stylesheet" href="../css/main-mobile-500.css" media="(max-width:500px)">
-    <link rel="stylesheet" href="../css/mini-mobile-320.css" media="(max-width:320px)">
     <link rel="stylesheet" href="../css/mid-mobile-380.css" media="(max-width:380px)">
+    <link rel="stylesheet" href="../css/mini-mobile-320.css" media="(max-width:320px)"> -->
     <script src="https://kit.fontawesome.com/cce7b28744.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -613,7 +614,7 @@
                 <h5>Get the tools that help everything work better together.</h5>
             </div>
             <div class="image-wrapper flex-box relative">
-                <div class="plan left flex-box absolute" id="basic">
+                <div class="plan left flex-box " id="basic">
                     <ul class="mini-logo flex-item">
                         <li><img src="../images/logo_transparent.png" alt=""></li>
                     </ul>
@@ -635,7 +636,7 @@
                         <button>Try it free</button>
                     </p>
                 </div>
-                <div class="plan middle flex-box absolute" id="premium">
+                <div class="plan middle flex-box " id="premium">
                     <ul class="mini-logo flex-item">
                         <li><img src="../images/logo_transparent.png" alt=""></li>
                         <li class="pro pro-green">Pro +</li>
@@ -663,7 +664,7 @@
                         <button>Try Standard</button>
                     </p>
                 </div>
-                <div class="plan right flex-box absolute" id="business">
+                <div class="plan right flex-box " id="business">
                     <ul class="mini-logo flex-item">
                         <li><img src="../images/logo_transparent.png" alt=""></li>
                         <li class="pro pro-orange">Pro</li>
@@ -698,8 +699,8 @@
                     </p>
                 </div>
                 <div class="download-img relative flex-item flex-item2">
-                    <img src="../images/DUK SMART HOMES DASHBOARD BEDROOM 1.png" alt="Tab Screen showing living room" class="absolute" id="tab">
-                    <img src="../images/iPhone 13 mini - 2.png" alt="Phone screen showimng living room" class="absolute" id="iphone">    
+                    <img src="../images/DUK SMART HOMES DASHBOARD BEDROOM 1.png" alt="Tab Screen showing living room" id="tab">
+                    <img src="../images/iPhone 13 mini - 2.png" alt="Phone screen showimng living room" id="iphone">    
                 </div>
             </div>
         </div>
